2002-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-display-message-enable-logging): New variable.
	(w3m-display-message): Use it.

2002-08-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-scan): Support Mew 3.0.64
	or later.

2002-08-21  OHASHI Akira  <bg66@koka-in.org>

	* shimbun/sb-macosx-jp.el: New file.
	* shimbun/sb-fml.el (shimbun-get-headers): Use `shimbun-index-url'
	instead of `shimbun-url-internal'.

	* shimbun/sb-redhat.el: Fix.

2002-08-18  OHASHI Akira  <bg66@koka-in.org>

	* shimbun/sb-redhat.el: New file.

2002-08-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-retrieve-url): Disable reflesh
	feature.  Move point to top of buffer.

2002-08-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-top-level-domain): New
	variable.
	(shimbun-asahi-url): Use it.
	(shimbun-asahi-from-address): Use it.
	(shimbun-asahi-get-headers-in-the-list-page): Enhance the
	uniqueness of Message-IDs.
	(shimbun-asahi-get-headers-in-the-top-page): Ditto.

2002-08-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-retrieve-1): Do not make error but return nil,
	even if decoding is failed.

2002-08-08  Nishimoto Masaki  <nishimoto@gaju.org>

	* w3m-proc.el (w3m-process-with-environment): Copy
	`process-environment' before `getenv' is called, in order to avoid
	putting side effects to environment variables.

2002-08-07  Takenobu Sugiyama  <sugiyama@ae.advantest.co.jp>

	* shimbun/sb-nikkansports.el (shimbun-nikkansports-groups-alist):
	Follow the change of the Web site.

2002-08-02  Hiroya Murata  <hiroya@use-ebisu.co.jp>

	* shimbun/sb-asahi.el (shimbun-asahi-get-headers-in-the-list-page):
	Follow the change of the Web site.

2002-08-01  TOMITA Yoshinori  <yoshint@flab.fujitsu.co.jp>

	* shimbun/sb-fml.el (shimbun-get-headers): Go to the beginning of
	a buffer before searching for index patterns.

2002-07-31  Katsumi Yamaoka  <yamaoka@jpl.org>
